# TwoPhase_Elastic_BV

./: CMakeCache.txt  CMakeLists.txt  Makefile  TwoPhaseElastic.cpp  TwoPhaseElastic.h  assemble_system.cpp  cmake_install.cmake  grid.eps  grid_dof.cpp  initial_values.cpp  main.cpp  quadrature_point_history.cpp  run.cpp  solve_and_output.cpp
mesh/: cir-flux.geo  cir-flux.msh  cir-flux2.msh  circle.geo  circle.msh  circle3.msh  circle4.msh  circleunit.msh  circleunit2.msh  circleunit3.msh  lithiation-nohole.geo  lithiation-nohole.msh  lithiation-nohole2.msh  lithiation.geo  lithiation1.msh  lithiation2.msh  lithiation3.msh  rectangle.geo  rectangle50x30.msh  square.geo  square100x100.msh  square40x40.msh  unit-cir-flux.geo  unit-cir-flux1.msh  unit-cir-flux2.msh  unit-cir-flux3.msh  unit-cir-flux4.msh  unit-cir-flux5.msh
results/trial1/: solution_00.0.vtu  solution_00.1.vtu  solution_00.2.vtu  solution_00.3.vtu  solution_00.pvtu  solution_100.0.vtu  solution_100.1.vtu  solution_100.2.vtu  solution_100.3.vtu  solution_100.pvtu  solution_1000.0.vtu  solution_1000.1.vtu  solution_1000.2.vtu  solution_1000.3.vtu  solution_1000.pvtu  solution_10000.0.vtu  solution_10000.1.vtu  solution_10000.2.vtu  solution_10000.3.vtu  solution_10000.pvtu  solution_10020.0.vtu  solution_10020.1.vtu  solution_10020.2.vtu  solution_10020.3.vtu  solution_10020.pvtu  solution_10040.0.vtu  solution_10040.1.vtu  solution_10040.2.vtu  solution_10040.3.vtu  solution_10040.pvtu  solution_10060.0.vtu  solution_10060.1.vtu  solution_10060.2.vtu  solution_10060.3.vtu  solution_10060.pvtu  (+4970 more)
(+10295 files in other folders)
